app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */



@media (min-width: 1px) {
  #logged-in {
    display: none;
  }
  #login-button {
    display: none;
  }
  #login-area{
    display: none;
  }
  .navbar-inverse .navbar-nav li a {
    color: black;
    font-weight: bold;
    font-size: 1.3em;
  }
  .navbar-collapse, .collapse {
    text-align: center;
  }
  .navbar {
    position: static;
    background-color: white;
    border: gray;
    border-bottom: 1px solid black;
  }
  .navbar-toggle {
    background-color: rgba(128, 128, 128, 0.8);
  }
  .navbar-inverse .navbar-nav li a:hover {
    color: gray;   
  }
}

@media (min-width: 456px) {
    #login-small {
    display: none;
  }
  #login-area {
    display: none;
  
  }
  .page-top #search {
    padding-right: 3em;
  }

}

/* CSS Navagation Bar for Medium/Large Devices */
@media (min-width: 768px) {
  #logged-in {
    margin-top: 1.8em;
    display: inline-block;
    margin-left: .5em;
  }

  #login-button {
    display: inline-block;
    margin-top: 1.8em;

  }
  #account {
    display: none;
  }
  .navbar {
  	position: static;
    background-color: white;
    border: gray;
  }
  .navbar-inverse .navbar-nav li a {
    color: black;
    font-weight: bold;
    font-size: 1.3em;
  }
  .navbar-inverse .navbar-nav li a:hover {
    color: gray;   
  }
  .container-fluid {
    padding: 0;   
  }
  .nav, .navbar-nav {
    width: 100%;
    border-top: 1px solid gray;
    border-bottom: 1px solid gray;
    display: table;
    table-layout: fixed;      
  }
  .navbar li {
    display: table-cell;
    width: 20%;
    border-right: 1px solid gray;
    text-align: center;
  }
}

/* CSS search/login bar for small devices */
@media (min-width: 992px) {
  #login-button {
    display: none;
  }
    #login-area {
    display: inline-block;
  }

}

